<resources>
    <string name="app_name">AerotankCalculation</string>

    <string name="title_home">Aerotank</string>
    <string name="hieu_qua_xu_ly">Hiệu quả xử lý</string>
    <string name="kich_thuoc_be">Kích thước bể</string>
    <string name="bun_hoat_tinh">Bùn hoạt tính</string>
    <string name="kiem_tra_thong_so">Kiểm tra thông số</string>
    <string name="thiet_bi_phan_phoi_khi">Thiết bị phân phối khí</string>
    <string name="bod">BOD = </string>
    <string name="dv_bod">mg/l</string>
    <string name="cod">COD = </string>
    <string name="bod_ra">BOD ra = </string>
    <string name="ss_ra">SS ra = </string>
    <string name="can_bay_hoi">Cặn  bay hơi = 65%, Độ tro = 0.2</string>
    <string name="ket_qua">Kết quả</string>
    <string name="cong_suat_may_thoi_khi">Công suất máy thổi khí = 80% \nvận tốc khí trong ống = 15 m/s</string>

    <string name="kq_bod">Lượng BOD hòa tan ra khỏi bể lắng = </string>
    <string name="kq_hieu_qua_bod">Hiệu quả xử lý tính theo BOD hòa tan = </string>
    <string name="kq_the_tich_be">Thể tích bể = </string>
    <string name="kq_chieu_rong_be">Chiều rộng bể = </string>
    <string name="kq_thoi_gian_luu_nuoc">Thời gian lưu nước = </string>
    <string name="kq_ty_so_fm">Tỷ số F/M = </string>
    <string name="kq_tai_trong_the_tich">Tải trọng thể tích = </string>
    <string name="kq_luong_bun">Lượng bùn sinh ra trong 1 ngày = </string>
    <string name="kq_luu_luong_xa_bun">Lưu lượng xả bùn = </string>
    <string name="kq_khoi_luong_xa_ra">Khối lượng bùn xả ra hằng ngày = </string>
    <string name="kq_luu_luong_tuan_hoan">Lưu lượng tuần hoàn = </string>
    <string name="kq_luong_kk">Lượng không khí cần cung cấp = </string>
    <string name="kq_ap_luc_can_thiet">Áp lực cần thiết của máy thổi khí = </string>
    <string name="kq_cong_suat_may_thoi_khi">Công suất máy thổi khí = </string>
    <string name="kq_so_dia_phan_phoi">Số đĩa phân phối khí = </string>
    <string name="kq_duong_kinh">Đường kính ống dẫn khí chính = </string>
    <string name="kq_duong_kinh_nhanh">Đường kính ống dẫn khí nhánh = </string>
    <string name="khong_hop_ly">không hợp lý</string>
</resources>
