<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp">

        <TextView
            android:layout_width="@dimen/_70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/bod"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragHieuQua_etBOD"
            android:layout_width="@dimen/_140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:background="@drawable/shape_radius_black_38"
            android:gravity="end"
            android:inputType="text"
            android:padding="@dimen/_8dp"
            android:textSize="14sp"
            tools:text="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dv_bod"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp">

        <TextView
            android:layout_width="@dimen/_70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/cod"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragHieuQua_etCOD"
            android:layout_width="@dimen/_140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:background="@drawable/shape_radius_black_38"
            android:gravity="end"
            android:inputType="text"
            android:padding="@dimen/_8dp"
            android:textSize="14sp"
            tools:text="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dv_bod"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp">

        <TextView
            android:layout_width="@dimen/_70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/bod_ra"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragHieuQua_etBODRa"
            android:layout_width="@dimen/_140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:background="@drawable/shape_radius_black_38"
            android:gravity="end"
            android:inputType="text"
            android:padding="@dimen/_8dp"
            android:textSize="14sp"
            tools:text="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dv_bod"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp">

        <TextView
            android:layout_width="@dimen/_70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/ss_ra"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragHieuQua_etSSRa"
            android:layout_width="@dimen/_140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:background="@drawable/shape_radius_black_38"
            android:gravity="end"
            android:inputType="text"
            android:padding="@dimen/_8dp"
            android:textSize="14sp"
            tools:text="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dv_bod"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/can_bay_hoi"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@color/black_38" />

    <TextView
        android:id="@+id/fragHieuQua_tvKetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginStart="@dimen/_16dp"
        android:background="@drawable/shape_red_radius_light_yellow"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/ket_qua"
        android:textColor="@color/red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/fragHieuQua_tvLuongBODHoaTan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:paddingBottom="@dimen/_8dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/kq_bod" />

    <TextView
        android:id="@+id/fragHieuQua_tvHieuQuaXuLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/kq_hieu_qua_bod" />

</LinearLayout>