<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/action_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fragHome_flHieuQuaXuLy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_168dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_hieu_qua_xl"
                    app:riv_corner_radius="@dimen/_3dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hieu_qua_xu_ly"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fragHome_flKichThuocBe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_168dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_kt_be"
                    app:riv_corner_radius="@dimen/_3dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kich_thuoc_be"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fragHome_flBunHoatTinh"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_168dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_bun_hoat_tinh"
                    app:riv_corner_radius="@dimen/_3dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bun_hoat_tinh"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fragHome_flKiemTraThongSo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_168dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_check"
                    app:riv_corner_radius="@dimen/_3dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kiem_tra_thong_so"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fragHome_flThietBiPhanPhoiKhi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_168dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:foreground="?android:attr/selectableItemBackground">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_tb_phan_phoi_khi"
                    app:riv_corner_radius="@dimen/_3dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/thiet_bi_phan_phoi_khi"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>