<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="Lưu lượng trung bình :"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etQtb"
                    android:layout_width="@dimen/_110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="m³/ngày"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="@dimen/_70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="BOD vào: "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etBODVao"
                    android:layout_width="@dimen/_140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dv_bod"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="@dimen/_70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="BOD ra: "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etBODRa"
                    android:layout_width="@dimen/_140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dv_bod"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="Lượng bùn sinh ra: "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etA"
                    android:layout_width="@dimen/_140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg/ngày"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="Chiều cao hữu ích: "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etH"
                    android:layout_width="@dimen/_140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="m"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="Cường độ khí qua 1 đĩa: "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etQDia"
                    android:layout_width="@dimen/_140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="m³/h"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="Số nhánh: "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fragPPK_etN"
                    android:layout_width="@dimen/_140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_radius_black_38"
                    android:gravity="end"
                    android:inputType="text"
                    android:padding="@dimen/_8dp"
                    android:textSize="14sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nhánh"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:text="@string/cong_suat_may_thoi_khi"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@color/black_38" />

            <TextView
                android:id="@+id/fragPPK_tvKetQua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/shape_red_radius_light_yellow"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/_8dp"
                android:paddingTop="@dimen/_8dp"
                android:text="@string/ket_qua"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/fragPPK_tvKhongKhiCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/kq_luong_kk" />

            <TextView
                android:id="@+id/fragPPK_tvApLuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/kq_ap_luc_can_thiet" />

            <TextView
                android:id="@+id/fragPPK_tvCongSuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/kq_cong_suat_may_thoi_khi" />

            <TextView
                android:id="@+id/fragPPK_tvSoDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/kq_so_dia_phan_phoi" />

            <TextView
                android:id="@+id/fragPPK_tvOngDanChinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/kq_duong_kinh" />


            <TextView
                android:id="@+id/fragPPK_tvOngDanNhanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp"
                android:paddingEnd="@dimen/_16dp"
                android:paddingStart="@dimen/_16dp"
                android:paddingTop="@dimen/_8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/kq_duong_kinh_nhanh" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>